Use correct executor and add controller tests for MailJetNotificationController